objects/TerritoryAssign__c.object
<CustomObject>
    <fields>
        <fullName>HB_Physicians__c</fullName>
        <label>HB Physicians</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HB-NE</fullName>
                </value>
                <value>
                    <fullName>HB-W</fullName>
                </value>
                <value>
                    <fullName>HB-SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_Modular__c</fullName>
        <label>IDN_Modular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IDN-CEN</fullName>
                </value>
                <value>
                    <fullName>IDN-W</fullName>
                </value>
                <value>
                    <fullName>IDN-S</fullName>
                </value>
                <value>
                    <fullName>IDN-NE</fullName>
                </value>
                <value>
                    <fullName>IDN-MidA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OB_Physicians__c</fullName>
        <label>OB Physicians</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OB-W</fullName>
                </value>
                <value>
                    <fullName>OB-S</fullName>
                </value>
                <value>
                    <fullName>OB-CEN</fullName>
                </value>
                <value>
                    <fullName>OB-NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TerritoryAssign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>HB_Physicians__c</columns>
        <columns>OB_Physicians__c</columns>
        <columns>IDN_Modular__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>TerritoryAssign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TerritoryAssign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>